<resources>
    <string name="app_name">Travel Blogger</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_exists">User already logged in</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="logout_text">Sign out</string>
    <string name="sign_in">Sign In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="add_photo">Click to Add Photo</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_user">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="or">or</string>
    <string name="forget_password">Forget Password?</string>
    <string name="change_password">Change Password</string>
    <string name="question_1">How was your experience with us?</string>
    <string name="question_2">Please rate us in following?</string>
    <string name="question_3">How good did we do in these aspects?</string>
    <string name="ease_of_use">Ease of use</string>
    <string name="quality">Quality</string>
    <string name="design">Design</string>
    <string name="redundant">Redundant</string>
    <string name="submit">Submit</string>
    <string name="about_us_description">I am Santosh Mahato and I’ve been working on mobile app development from last year, while still studying at college. Had my own projects, coded mostly in Java and Python</string>
    <string name="about_us">ABOUT US</string>
    <string name="address">ADDRESS</string>
    <string name="address_details">Gatthaghar-44811, Bhaktapur,\nBagmati Province, Nepal</string>
    <string name="contact_details">Phone: (+977) 9808898892\nPhone: (+91) 8728822814\nEmail: win.santosh205618@gmail.com</string>
    <string name="contact">CONTACT</string>
    <string name="comment">Comment</string>
    <string name="like">LIKE</string>
    <string name="share">Share</string>
    <string name="see_more"><u>See More</u></string>
    <string name="about">About:</string>
    <string name="uploader_details">Uploader Details</string>
    <string name="comments">Comments</string>
    <string name="share_your_experience_about_this_place">Share your experience about this place</string>
    <string name="your_ratings_t">Your Ratings:\t</string>
</resources>