<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#40A33F"
    android:gravity="center_vertical"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".LoginPage">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:layout_marginBottom="16dp"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:drawableTint="#000000"
            android:inputType="textEmailAddress"
            android:importantForAutofill="yes"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/ic_visible">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:layout_marginBottom="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:drawableTint="#000000"
        android:importantForAutofill="yes" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forget_password_tv"
        android:text="@string/forget_password"
        android:layout_gravity="end"
        android:paddingEnd="16dp"
        android:paddingStart="0dp"
        android:textSize="20sp"
        android:textColor="#FFFFFF"/>
    <Button
        android:id="@+id/custom_signin_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:tag="custom_login_button"
        android:layout_margin="16dp"
        android:text="@string/sign_in" />
    <TextView
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/create_account"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="wrap_content">
        <View
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey_200"/>
        <TextView
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/grey_200"/>
        <View
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:background="@color/grey_200"/>
    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:buttonSize="wide"
        android:layout_gravity="center"/>



</LinearLayout>