<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".CreateUserPage"
    android:background="@color/dark_primary_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="12dp"
            app:cardCornerRadius="75dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/add_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add_photo" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="Upload Your Photo"
            android:id="@+id/upload_photo_tv"
            android:fontFamily="sans-serif-black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:layout_marginBottom="10dp"
                android:hint="@string/username"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:drawableTint="#0000FF"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:layout_marginBottom="10dp"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:drawableTint="#0000FF"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="#000000"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_visible">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:drawableTint="#0000FF"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#000000"
            app:passwordToggleDrawable="@drawable/ic_visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:layout_marginBottom="10dp"
                android:hint="@string/confirm_password"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:drawableTint="#0000FF"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_user" />
    </LinearLayout>
</ScrollView>