<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackFrag"
    android:padding="10dp"
    android:background="#40A33F">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/question_1"
                android:textSize="20sp"
                android:gravity="center"
                android:background="#0505FF"
                android:textColor="#FFFFFF"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/border_shadow"
                android:backgroundTint="#FFFFFF"
                android:layout_marginBottom="20dp">
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:max="5"
                    android:progressTint="#FFCC01"
                    android:id="@+id/ans1"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/question_2"
                android:textSize="25sp"
                android:gravity="center"
                android:background="#0505FF"
                android:textColor="#FFFFFF"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/border_shadow"
                android:backgroundTint="#FFFFFF"
                android:layout_marginBottom="20dp">
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:max="5"
                    android:progressTint="#FFCC01"
                    android:id="@+id/ans2" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/question_3"
                android:textSize="20sp"
                android:gravity="center"
                android:background="#0505FF"
                android:textColor="#FFFFFF"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border_shadow"
                android:backgroundTint="#FFFFFF"
                android:layout_marginBottom="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/ease_of_use"
                        android:textColor="#000000"
                        android:gravity="center|end"/>
                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sub_ans1"
                        android:numStars="5"
                        android:max="5"
                        android:progressTint="#FFCC01"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/quality"
                        android:textColor="#000000"
                        android:gravity="center|end"/>
                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sub_ans2"
                        android:numStars="5"
                        android:max="5"
                        android:progressTint="#FFCC01"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/design"
                        android:textColor="#000000"
                        android:gravity="center|end"/>
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sub_ans3"
                    android:numStars="5"
                    android:max="5"
                    android:progressTint="#FFCC01"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/redundant"
                        android:textColor="#000000"
                        android:gravity="center|end"/>
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sub_ans4"
                    android:numStars="5"
                    android:max="5"
                    android:progressTint="#FFCC01"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/submit_btn"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>