<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/dark_primary_color">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:layout_marginBottom="10dp"
            android:hint="@string/username"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:drawableTint="#000000"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:drawableTint="#000000"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/ic_visible">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:layout_marginBottom="10dp"
            android:hint="New Password"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:drawableTint="#000000"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/ic_visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:layout_marginBottom="10dp"
            android:hint="@string/confirm_password"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:drawableTint="#000000"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password" />


</LinearLayout>